working on footer alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/***************************************** Core Styles *****************************************/
+/* Core Styles */
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -14,14 +14,13 @@ img {
   height: auto;
 }
 h1,
-h2,
-h3 {
+h2 {
   margin: 0;
   padding: 1em 0;
 }
 p {
   margin: 0;
-  padding: 1em 0;
+  /*padding: 1em 0;*/
 }
 .btn {
   /*display: inline-block;*/
@@ -39,7 +38,7 @@ p {
   color: #333;
 }
 
-/***************************************** Header Showcase *****************************************/
+/* Header Showcase */
 #showcase {
   min-height: 450px;
   color: #fff;
@@ -88,14 +87,14 @@ img.logo {
   padding: 0 1.5em;
 }
 
-/***************************************** section A *****************************************/
+/* section A */
 #section-a {
   background: #eaeaea;
   color: #333;
   padding-bottom: 1em;
 }
 
-/***************************************** section B *****************************************/
+/* section B */
 #section-b {
   padding-top: 1em;
 }
@@ -122,15 +121,15 @@ img.logo {
   padding: 0.5em;
   padding: 0 0.5em 0 0.5em;
 }
-/***************************************** CSS for Sub pages*****************************************/
-/***************************************** section A *****************************************/
+/* CSS for Sub pages*/
+/* section A */
 #section-a-sub {
   background: #eaeaea;
   color: #333;
   padding-bottom: 1em;
 }
 
-/***************************************** section B *****************************************/
+/*section B */
 #section-b-sub {
   padding-top: 1em;
 }
@@ -199,7 +198,11 @@ a:visited#contactEmail {
   padding: 1em;
   background: #000000;
   color: #fff;
+}
+#main-footer div {
   text-align: center;
+  align-content: center;
+  margin: auto;
 }
 
 #main-footer a {
@@ -208,8 +211,7 @@ a:visited#contactEmail {
 }
 
 #main-footer img {
-  width: 80%;
-  vertical-align: center;
+  width: 100%;
   max-width: 250px;
 }
 .footer-card {
@@ -248,7 +250,7 @@ h4 {
   margin: 0;
 }
 
-/***************************************** Media Queries *****************************************/
+/* Media Queries */
 @media (min-width: 700px) {
   .grid {
     display: grid;
@@ -295,13 +297,13 @@ h4 {
   }
 
   img.logo {
-    width: 50%;
+    /*  width: 50%;
     max-width: 400px;
     padding-top: 2em;
   }
   #section-d .box:first-child {
     grid-column: 2/3;
     text-align: left;
-    padding-left: 15em;
+    padding-left: 15em;*/
   }
 }
